--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<!-- intro -->
 			<div class="intro">
 				<!-- avatar image -->
-				<img src="me.png" style="width: 150px;border-radius: 100px" class="mb-4">
+				<img src="aditya.jpeg" style="width: 150px;border-radius: 100px" class="mb-4">
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">Aditya Kumar Goyal</h1>
@@ -174,7 +174,7 @@
 				<div class="col-md-3">
 					<div class="text-center text-md-left">
 						<!-- avatar image -->
-						<img src="me.png" style="width: 150px;border-radius: 100px" class="mb-4">
+						<img src="aditya.jpeg" style="width: 150px;border-radius: 100px" class="mb-4">
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30" style="height: 30px;"></div>
 				</div>
@@ -184,7 +184,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<!-- about text -->
-								<p>I am Aditya Kumar Goyal, a web developer afrom Haryana, India. I have rich experience in building and customizing websites and app, also I am good at logo designing. Recently I have started learning machine learning and have created great apps which are mention below</p>
+								<p>I am Aditya Kumar Goyal, a web developer from Haryana, India. I have rich experience in building and customizing websites and app, also I am good at logo designing. Recently I have started learning machine learning and have created great apps which are mention below</p>
 
 								<div class="spacer d-md-none d-lg-none" data-height="30" style="height: 30px;"></div>
 							</div>
@@ -193,7 +193,7 @@
 								<div class="skill-item">
 									<div class="skill-info clearfix">
 										<h4 class="float-left mb-3 mt-0">Web Development</h4>
-										<span class="float-right">50%</span>
+										<span class="float-right">80%</span>
 									</div>
 									<div class="progress">
 										<div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20" data-color="#FFD15C" style="background-color: yellowgreen; width: 50%;">
@@ -256,7 +256,7 @@
 					<!-- fact item -->
 					<div class="fact-item">
 						<div class="details">
-							<h3 class="mb-0 mt-0 number"><em class="count">143</em></h3>
+							<h3 class="mb-0 mt-0 number"><em class="count">144</em></h3>
 							<p class="mb-0">Projects completed</p>
 						</div>
 					</div>
@@ -466,8 +466,8 @@
             <!-- hobbies item -->
             <div class="timeline-container wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
               <div class="content">
-                <img src="swimming.png" style="width:40px;">
-                <h3 class="title" style="display: inline-block;">Swimming</h3>
+                <img src="cycling.jpg" style="width:40px;">
+                <h3 class="title" style="display: inline-block;">Cycling</h3>
                 <hr>
               </div>
             </div>
@@ -508,13 +508,13 @@
       		 <div class="testimonial-item text-center mx-auto slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="-1" role="option" aria-describedby="slick-slide00" style="width: 700px;">
 				<div class="mb-3 mx-auto">
 
-					<img style="border-radius: 20px;" class="img-responsive" src="beach.jpg">						
+					<img style="border-radius: 20px;" class="img-responsive" src="shimla.jpg">						
 				</div>
 
-					<h4 class="mt-3 mb-0">Henderson Beach</h4>
+					<h4 class="mt-3 mb-0">Shimla</h4>
 					
 					<div class="bg-white padding-30 shadow-dark rounded triangle-top position-relative mt-4">
-						<p class="mb-0">I love the beach. We are lucky to go several times a year to see my parents and sister, who live in Destin, Florida.</p>
+						<p class="mb-0">I love Shimla , I love snowfall.</p>
 					</div>
 				</div>
 
@@ -545,8 +545,9 @@
 
 					<h3 class="wow fadeInUp" style="color: white;visibility: visible; animation-name: fadeInUp;">Aditya Kumar Goyal</h3>
 				    <hr style="border: 0.5px solid white;">
-					<img src="me.png" style="display: inline-block; width: 100px;border-radius: 100px" class="mb-4">
+					<img src="aditya.jpeg" style="display: inline-block; width: 100px;border-radius: 100px" class="mb-4">
             		<p style="margin: 5px; color: white; display: inline-block;">Please free feel to contact me on my social handles</p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3426.6837562533933!2d76.91540481506138!3d30.811501681609755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390f8dccd70bb239%3A0x99672360a89460d1!2sUjwal%20cement%20And%20hardware%20store!5e0!3m2!1sen!2sin!4v1664784176233!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 				</div>
 
@@ -559,7 +560,7 @@
 				    <a href="#">
 				      <img src="instagram.png" style="width: 40px;margin: 5px">
 				    </a>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3426.6837562533933!2d76.91540481506138!3d30.811501681609755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390f8dccd70bb239%3A0x99672360a89460d1!2sUjwal%20cement%20And%20hardware%20store!5e0!3m2!1sen!2sin!4v1664784176233!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					
 				</div>
 
 			</div>
@@ -602,7 +603,7 @@
             <button class="close" data-dismiss="modal" style="text-align: right;padding: 10px;">&times;</button>
             <hr>
             <div class="modal-body">
-              <p>HTML</p>
+              <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
              </div>
 
         </div>
